# atom

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  COPYING.txt  LICENSE  MANIFEST.in  Makefile  README.md  README.rbst  README.rst  TODO  atom.py  codecov.yml  generic.py  greet.readthedocs.yml  lint_requirements.txt  pyproject.toml  readthedocs.yml  releasenotes.rst  setup.cfg  setup.py  test_requirements.txt  tester.py  typing_experiment.py
.github/workflows/: ci.yml  docs.yml  release.yml
atom/: __init__.py  _cpphelpers.py  alias.py  annotation_utils.py  api.py  array.py  atom.py  atom_list.py  catom.pyi  coerced.py  coerced.pyi  compat.py  containerlist.py  containerlist.pyi  delegates_to.py  delegator.py  delegator.pyi  dict.py  dict.pyi  enum.py  enum.pyi  errors.py  event.py  event.pyi  formatting.py  instance.py  instance.pyi  int_enum.py  intenum.py  list.py  list.pyi  members.py  property.py  property.pyi  scalars.py  scalars.pyi  set.py  set.pyi  signal.py  signal.pyi  (+11 more)
atom/datastructures/: __init__.py  api.py  sortedmap.pyi
atom/meta/: __init__.py  annotation_utils.py  atom_meta.py  member_modifiers.py  observation.py
atom/old/: containerlist.py  instance.py  subclass.py  typed.py
atom/src/: atom.cpp  atom.h  atom_list.cpp  atom_list.h  atom_meta.cpp  atom_meta.h  atomdict.cpp  atomdict.h  atomlist.cpp  atomlist.h  atommeta.cpp  atommeta.h  atomref.cpp  atomref.h  atomset.cpp  atomset.h  behaviors.h  callback_set.cpp  callback_set.h  callbackset.cpp  callbackset.h  catom.cpp  catom.h  catom_module.cpp  catommeta.cpp  catommeta.h  catommodule.cpp  catompointer.h  class_map.cpp  class_map.h  default_value_behavior.cpp  default_value_behavior.h  defaultvaluebehavior.cpp  delattrbehavior.cpp  descriptor.cpp  descriptor.h  dispatcher.cpp  dispatcher.h  emitter.cpp  emitter.h  (+60 more)
atom/src/behavior/: default_value_behavior.cpp  getattrbehavior.cpp  validate_behavior.h
atom/src/core/: atom.cpp  atom.h  class_map.cpp  class_map.h  member.cpp  member.h  null_object.cpp  null_object.h  validator.cpp  validator.h
atom/src/datastructures/: atomlist.cpp  atomlist.h  sortedmap.cpp
atom/src/old/: atomref.cpp  catompointer.h  enumtypes.cpp  memberchange.cpp  memberchange.h  methodwrapper.cpp  methodwrapper.h  observerpool.h  signalconnector.cpp  validator.cpp
atom/src/utils/: math.h  py23_str.h  py23compat.h  py2_str_impl.h  py2compat.h  py3_str_impl.h  py3compat.h  smallhash.h  stdint.h  utils.h
atom/tests/: test_atomlist.py
docs/: Makefile  Release.rbst  environment.yml  make.bat  requirements.txt
docs/source/: conf.py  greet_score.rst  index.rst  substitution.sub  substitutions.sub
docs/source/_templates/: layout.html
docs/source/advanced/: containers.rst  customization.rst  index.rst  manual_notifications.rst  property.rst  typing.rst  weakref.rst
docs/source/api/: atom.api.rst  atom.atom.rst  atom.catom.rst  atom.coerced.rst  atom.containerlist.rst  atom.datastructures.rst  atom.delegator.rst  atom.dict.rst  atom.enum.rst  atom.event.rst  atom.instance.rst  atom.list.rst  atom.meta.rst  atom.property.rst  atom.rst  atom.scalars.rst  atom.signal.rst  atom.subclass.rst  atom.tuple.rst  atom.typed.rst  atom.typing_utils.rst
docs/source/api_ref/: coerced.rst  containerlist.rst  delegator.rst  dict.rst  enum.rst  event.rst  index.rst  instance.rst  intenum.rst  list.rst  property.rst  scalars.rst  signal.rst  tuple.rst  typed.rst  version.rst
docs/source/basis/: basis.rst  index.rst  installation.rst  mangled_methods.rst  members.rst  observation.rst  typing.rst
docs/source/dev_guides/: index.rst
docs/source/developer_notes/: index.rst
docs/source/examples/: ex_coersion.rst  ex_composition.rst  ex_containers.rst  ex_default_value.rst  ex_employee.rst  ex_hello_world.rst  ex_inventory.rst  ex_metadata.rst  ex_numeric.rst  ex_observe.rst  ex_observe_hints.rst  ex_person.rst  ex_pickling.rst  ex_property.rst  ex_range.rst  ex_static_type_checking.rst  example_doc_generator.py  index.rst
examples/: default_value.py  delegatesto.py  forward_typed.py  hello_world.py  observe.py  property.py  sync_value.py
examples/api/: coersion.py  composition.py  containers.py  default_value.py  metadata.py  numeric.py  observe.py  observe_hints.py  pickling.py  property.py  range.py
examples/tutorial/: employee.py  hello_world.py  inventory.py  person.py
examples/typehints/: inventory.py  person.py  static_type_checking.py
src/: atom.cpp  atom.h  atommeta.cpp  atommeta.h  callbackset.cpp  callbackset.h  catommodule.cpp  errors.cpp  errors.h  member.cpp  member.h  memberchange.cpp  memberchange.h  methodwrapper.cpp  methodwrapper.h  module.cpp  platstdint.h  py23compat.h  signal.cpp  signal.h  typeddict.cpp  typeddict.h  typedlist.cpp  typedlist.h  typedset.cpp  typedset.h  utils.h
tests/: __init__.py  test_atom.py  test_atom_from_annotations.py  test_atomdefaultdict.py  test_atomdict.py  test_atomlist.py  test_atomref.py  test_atomset.py  test_default_values.py  test_del_behaviors.py  test_delegate.py  test_delegator.py  test_enum.py  test_eventbinder.py  test_examples.py  test_get_behaviors.py  test_get_set_state.py  test_getstate_behaviors.py  test_intenum.py  test_mem.py  test_member.py  test_observe.py  test_post_behaviors.py  test_property.py  test_set_behaviors.py  test_signalconnector.py  test_typing_utils.py  test_validators.py  test_version.py
tests/datastructure/: test_sortedmap.py
tests/type_checking/: test_annotations.yml  test_coerced.yml  test_dataclass_compare.py  test_delegator.yml  test_dict.yml  test_enum.yml  test_event.yml  test_generic_aliases.yml  test_list.yml  test_nested.yml  test_property.yml  test_scalars.yml  test_set.yml  test_signal.yml  test_subclass.yml  test_tuple.yml  test_typed_instance.yml
tests/typing/: test_coerced.yml  test_delegator.yml  test_dict.yml  test_enum.yml  test_event.yml  test_generic_aliases.yml  test_list.yml  test_optional.py  test_property.yml  test_scalars.yml  test_set.yml  test_signal.yml  test_subclass.yml  test_tuple.yml  test_typed_instance.yml
(+4 files in other folders)
