# --------------------------------------------------------------------------------------
# Copyright (c) 2013-2023, Nucleic Development Team.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------

[project]
  name = "atom"
  description = "Memory efficient Python objects"
  readme = "README.rst"
  requires-python = ">=3.8"
  license = { file = "LICENSE" }
  authors = [{ name = "The Nucleic Development Team", email = "sccolbert@gmail.com" }]
  maintainers = [{ name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com" }]
  classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
  ]
  dependencies = ["typing_extensions;python_version<'3.11'"]
  dynamic = ["version"]

  [project.urls]
    homepage = "https://github.com/nucleic/atom"
    documentation = "https://atom.readthedocs.io/en/latest/"
    repository = "https://github.com/nucleic/atom"
    changelog = "https://github.com/nucleic/atom/blob/main/releasenotes.rst"

[build-system]
  requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3", "cppy>=1.2.0"]
  build-backend = "setuptools.build_meta"

[tool.setuptools]
  include-package-data = false
  package-data = { atom = ["py.typed", "*.pyi"] }

[tool.setuptools_scm]
  write_to = "atom/version.py"
  write_to_template = """
# --------------------------------------------------------------------------------------
# Copyright (c) 2013-2023, Nucleic Development Team.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------
# This file is auto-generated by setuptools-scm do NOT edit it.

from collections import namedtuple

#: A namedtuple of the version info for the current release.
_version_info = namedtuple("_version_info", "major minor micro status")

parts = "{version}".split(".", 3)
version_info = _version_info(
    int(parts[0]),
    int(parts[1]),
    int(parts[2]),
    parts[3] if len(parts) == 4 else "",
)

# Remove everything but the 'version_info' from this module.
del namedtuple, _version_info, parts

__version__ = "{version}"
"""

[tool.ruff]
  src = ["src"]
  line-length = 88

  [tool.ruff.lint]
    select = ["C", "E", "F", "W", "I", "C90", "RUF"]
    extend-ignore = ["E501", "RUF012"]

    [tool.ruff.lint.isort]
      combine-as-imports = true
      known-first-party = ["atom"]

    [tool.ruff.lint.mccabe]
      max-complexity = 20

[tool.mypy]
  follow_imports = "normal"
  strict_optional = true

[tool.pytest.ini_options]
  minversion = "6.0"
