# --------------------------------------------------------------------------------------
# Copyright (c) 2013-2025, Nucleic Development Team.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------

[project]
  name = "atom"
  description = "Memory efficient Python objects"
  readme = "README.rst"
  requires-python = ">=3.10"
  license = "BSD-3-Clause"
  license-files = ["LICENSE"]
  authors = [{ name = "The Nucleic Development Team", email = "sccolbert@gmail.com" }]
  maintainers = [{ name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com" }]
  classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
  ]
  dependencies = ["typing_extensions;python_version<'3.11'"]
  dynamic = ["version"]

  [project.urls]
    homepage = "https://github.com/nucleic/atom"
    documentation = "https://atom.readthedocs.io/en/latest/"
    repository = "https://github.com/nucleic/atom"
    changelog = "https://github.com/nucleic/atom/blob/main/releasenotes.rst"

[build-system]
  requires = ["setuptools>=77.0", "wheel", "setuptools_scm[toml]>=3.4.3", "cppy>=1.2.0"]
  build-backend = "setuptools.build_meta"

[tool.setuptools]
  include-package-data = false
  package-data = { atom = ["py.typed", "*.pyi"] }

[tool.setuptools_scm]
  write_to = "atom/version.py"
  write_to_template = """
# --------------------------------------------------------------------------------------
# Copyright (c) 2013-2025, Nucleic Development Team.
#
# Distributed under the terms of the Modified BSD License.
#
# The full license is in the file LICENSE, distributed with this software.
# --------------------------------------------------------------------------------------
# This file is auto-generated by setuptools-scm do NOT edit it.

# NOTE: version_info has been removed in 0.12.0.
# Use packaging.version.parse(__version__) instead which provides a more robust
# API.

__version__ = "{version}"
"""

[tool.ruff]
  src = ["src"]
  line-length = 88

  [tool.ruff.lint]
    select = ["C", "E", "F", "W", "I", "C90", "RUF"]
    extend-ignore = ["E501", "RUF012"]

    [tool.ruff.lint.isort]
      combine-as-imports = true
      known-first-party = ["atom"]

    [tool.ruff.lint.mccabe]
      max-complexity = 20

[tool.mypy]
  follow_imports = "normal"
  strict_optional = true

[tool.pytest.ini_options]
  minversion = "6.0"

[tool.coverage]
  [tool.coverage.run]
    branch = true
    source = ["atom"]

  [tool.coverage.report]
    # Regexes for lines to exclude from consideration
    exclude_lines = [
      # Have to re-enable the standard pragma
      "pragma: no cover",

      # Don't complain if tests don't hit defensive assertion code:
      "raise NotImplementedError",
      "pass",

      # Don't complain about abstract methods, they aren't run:
      "@(abc\\.)?abstractmethod",

      # Don't complain about type checking
      "if TYPE_CHECKING:",

      # Don't complain about ellipsis in overload
      "\\.\\.\\.",
    ]
